# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "raw-cstr"
description = "Keep raw-cstrings in thread local storage for reuse"
edition = "2021"
homepage = "https://github.com/novafacing/raw-cstr"
license = "Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/novafacing/raw-cstr"
version = "0.1.1"

[dependencies]
anyhow = "1.0.79"
